# GpgFrontend

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Doxyfile  PrivacyPolicy.md  README.build  README.md  README_CN.md  SECURITY.md  TODO  TRANSLATORS  amplify.yml  gpg4usb.pro  gpg4usb.pro.windows.static  gpg4usb.qrc  gpg4usb.rc  gpg4usb_class_dependencies.graphml  gpgfrontend.icns  gpgfrontend.qrc  gpgfrontend.rc  privacy_policy.md  qmake-linux-glibc2.3.sh  qmake-linux.sh  qmake-linux64.sh  qmake-windows.sh
rust/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  cargo-sources.json
rust/src/: cache.rs  cancel.rs  crypto.rs  crypto_stream.rs  err.rs  ffi.rs  ffi_crypto.rs  ffi_key.rs  ffi_keygen.rs  ffi_mem.rs  ffi_user_id.rs  host.rs  key.rs  keygen.rs  lib.rs  tar.rs  types.rs  user_id.rs  utils.rs
rust/src/crypto/: decrypt.rs  encrypt.rs  mod.rs  sign.rs  verify.rs
rust/src/crypto_stream/: decrypt.rs  encrypt.rs  mod.rs  sign.rs  verify.rs
rust/src/ffi/: key.rs  keygen.rs  mem.rs  mod.rs  user_id.rs
src/: Application.cpp  Application.h  BinaryValidate.cpp  BinaryValidate.h  CMakeLists.txt  Command.cpp  Command.h  Doxyfile  GpgFrontend.cpp  GpgFrontend.h  GpgFrontend.h.in  GpgFrontendBuildInfo.h  GpgFrontendBuildInfo.h.in  GpgFrontendBuildInstallInfo.h.in  GpgFrontendContext.cpp  GpgFrontendContext.h  Initialize.cpp  Initialize.h  MainWindow.cpp  Mime.cpp  Security.cpp  Security.h  aboutdialog.cpp  app.cpp  app.h  attachments.cpp  attachmenttablemodel.cpp  before_exit.cpp  cmd.cpp  cmd.h  editorpage.cpp  fileencryptiondialog.cpp  findwidget.cpp  gpgconstants.cpp  gpgcontext.cpp  helppage.cpp  init.cpp  init.h  keydetailsdialog.cpp  keygendialog.cpp  (+18 more)
src/advance/: CMakeLists.txt  UnknownSignersChecker.cpp  UnknownSignersChecker.h
src/core/: CMakeLists.txt  GFConstants.cpp  GFCoreInit.cpp  GFCoreInit.h  GFCoreLog.cpp  GFCoreLog.h  GFLog.cpp  GpgConstants.cpp  GpgConstants.h  GpgContext.cpp  GpgContext.h  GpgCoreInit.cpp  GpgCoreInit.h  GpgFrontendCore.cpp  GpgFrontendCore.h  GpgFrontendCoreExport.h  GpgFunctionObject.cpp  GpgFunctionObject.h  GpgGenKeyInfo.cpp  GpgGenKeyInfo.h  GpgInfo.cpp  GpgInfo.h  GpgModel.h
src/core/aes/: aes_ssl_cbc.cpp
src/core/common/: CoreCommonUtil.cpp  CoreCommonUtil.h
src/core/file/: FileOperator.cpp
src/core/function/: AESCryptoHelper.cpp  AESCryptoHelper.h  AppSecureKeyManager.cpp  AppSecureKeyManager.h  ArchiveFileOperator.cpp  ArchiveFileOperator.h  CacheManager.cpp  CacheManager.h  CharsetOperator.cpp  CharsetOperator.h  CoreSignalStation.cpp  CoreSignalStation.h  DataObjectOperator.cpp  DataObjectOperator.h  DoubleRatchet.cpp  DoubleRatchet.h  FileOperator.cpp  FileOperator.h  GFBufferFactory.cpp  GFBufferFactory.h  GFKeyDatabase.cpp  GFKeyDatabase.h  GlobalSettingStation.cpp  GlobalSettingStation.h  GpgBasicOperator.cpp  GpgCommandExecutor.cpp  GpgFileOpera.cpp  (+28 more)
src/gpg/: CMakeLists.txt  GpgConstants.cpp  GpgConstants.h  GpgContext.cpp  GpgContext.h  GpgCoreInit.cpp  GpgCoreInit.h  GpgFileOpera.cpp  GpgFunctionObject.h  GpgGenKeyInfo.cpp  GpgGenKeyInfo.h  GpgInfo.cpp  GpgInfo.h  GpgKey.cpp  GpgKeySignature.cpp  GpgModel.h  GpgSubKey.cpp  GpgUID.cpp  Signature.cpp  UID.cpp
src/module/: CMakeLists.txt  GpgFrontendModule.h  GpgFrontendModuleExport.h  GpgFrontendModuleInit.cpp  GpgFrontendModuleInit.h
src/pinentry/: CMakeLists.txt  accessibility.cpp  accessibility.h  argparse.cpp  argparse.h  focusframe.cpp  focusframe.h  keyboardfocusindication.cpp  keyboardfocusindication.h  password_cache.cpp  password_cache.h  pinentry.cpp  pinentry.h  pinentry_debug.cpp  pinentry_debug.h  pinentry_main.cpp  pinentryconfirm.cpp  pinentryconfirm.h  pinentrydialog.cpp  pinentrydialog.h  pinlineedit.cpp  pinlineedit.h  qti18n.cpp  secmem++.h  secmem.cpp  secmem.h  secmem_util.h  util.cpp  util.h
src/platform/: LinuxSecretStore.cpp  MacRelaunch.mm  MacSecretStore.cpp  PlatformSecretStore.h  StubSecretStore.cpp  WinSecretStore.cpp
src/plugin/: CMakeLists.txt  GpgFrontendPlugin.h  GpgFrontendPluginExport.h  GpgFrontendPluginInit.cpp  GpgFrontendPluginInit.h
src/sdk/: CMakeLists.txt  GFSDK.h  GFSDKBasic.cpp  GFSDKBasic.h  GFSDKBasicModel.h  GFSDKBuildInfo.h.in  GFSDKExtra.cpp  GFSDKExtra.h  GFSDKGpg.cpp  GFSDKGpg.h  GFSDKLog.cpp  GFSDKLog.h  GFSDKModule.cpp  GFSDKModule.h  GFSDKModuleModel.h  GFSDKUI.cpp  GFSDKUI.h  GFSDKUIModel.h  GFSDKUtils.cpp  README.md
src/server/: BaseAPI.cpp  BaseAPI.h  CMakeLists.txt  ComUtils.cpp  ComUtils.h  PubkeyUploader.cpp
src/smtp/: CMakeLists.txt  emailaddress.cpp  emailaddress.h  mimeattachment.cpp  mimecontentformatter.cpp  mimefile.cpp  mimehtml.cpp  mimeinlinefile.cpp  mimemessage.cpp  mimemessage.h  mimemultipart.cpp  mimepart.cpp  mimetext.cpp  mimetext.h  quotedprintable.cpp  smtpclient.cpp  smtpexports.h
src/test/: CMakeLists.txt  GpgFrontendCoreExport.h  GpgFrontendTest.cpp  GpgFrontendTest.h
src/ui/: AboutDialog.cpp  AttachmentTableModel.cpp  Attachments.cpp  CMakeLists.txt  EditorPage.cpp  FileEncryptionDialog.cpp  FileEncryptionDialog.h  FindWidget.cpp  FindWidget.h  GpgFrontendApplication.cpp  GpgFrontendApplication.h  GpgFrontendUI.cpp  GpgFrontendUI.h  GpgFrontendUIInit.cpp  GpgFrontendUIInit.h  HelpPage.cpp  KeyDetailsDialog.cpp  KeyImportDetailDialog.cpp  KeyImportDetailDialog.h  KeyList.cpp  KeyMgmt.cpp  KeyMgmt.h  KeyPairDetailTab.cpp  KeyServerImportDialog.cpp  KeyServerImportDialog.h  KeyUploadDialog.cpp  KeyUploadDialog.h  KeygenDialog.cpp  KeygenThread.cpp  MainWindow.cpp  MainWindow.h  QuitDialog.cpp  QuitDialog.h  SendMailDialog.cpp  SettingsDialog.cpp  SettingsDialog.h  ShowCopyDialog.cpp  ShowCopyDialog.h  SignalStation.cpp  SignalStation.h  (+15 more)
test/: CMakeLists.txt  GpgCoreTest.cpp  GpgCoreTestBasicOpera.cpp  GpgCoreTestImportExport.cpp  GpgCoreTestKeyModel.cpp  GpgCoreTestKeyModelAlone.cpp  GpgCoreTestKeygen.cpp  GpgCoreTestKeygenAlone.cpp  GpgFrontendTest.h  bin  runtest.sh  test.pro  testgpgcontext.cpp  todo.txt
test/conf/: core.cfg
test/data/: pv1.key  pv2.key  pv3.key  pv4.key
test/gpg/: gpg1
(+1387 files in other folders)
