[package]
name = "gf-rust"
version = "0.1.3"
edition = "2024"
description = "Rust Engine for GpgFrontend"
authors = ["saturneric <eric@bktus.com>"]
license = "GPL-3.0-or-later"

[lib]
name = "gf_rust"
crate-type=["staticlib"]

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
once_cell = "1.21.4"
pgp = { version = "0.19.0", features = ["draft-pqc"] }
rand = "0.8"
rsa = "0.9.10"
tar = "0.4.45"
tempfile = "3.27.0"
zeroize = { version = "1.8.2", features = ["derive"]}

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.61.2"

[build-dependencies]
cbindgen = "0.29.2"
